[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shapley-attribution"
version = "2.0.0"
description = "Shapley value methods for multi-touch attribution modeling with scikit-learn compatible API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Ian Chu Te", email = "ianchute@gmail.com"},
]
keywords = ["shapley", "attribution", "marketing", "game-theory", "multi-touch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.22",
    "scikit-learn>=1.2",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
benchmarks = [
    "matplotlib>=3.5",
    "pandas>=1.4",
    "tabulate>=0.9",
]

[project.urls]
Homepage = "https://github.com/ianchute/shapley-attribution-model-zhao-naive"
Repository = "https://github.com/ianchute/shapley-attribution-model-zhao-naive"

[tool.setuptools.packages.find]
include = ["shapley_attribution*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
